<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity3">

    <ImageView
        android:id="@+id/fundo"
        android:layout_width="414dp"
        android:layout_height="624dp"
        android:layout_marginBottom="336dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.666"
        app:layout_constraintStart_toStartOf="parent"
        tools:srcCompat="@tools:sample/backgrounds/scenic" />

    <ImageView
        android:id="@+id/Perfil"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/nomedousuario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="128dp"
        android:hint="@string/nomedousuario"
        android:textColorHint="#050505"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/Perfil" />

    <EditText
        android:id="@+id/nomecpletodousuario"
        android:layout_width="296dp"
        android:layout_height="55dp"
        android:layout_marginTop="68dp"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/nomecpletodousuario"
        android:inputType="textMultiLine"
        android:textColorHint="#000000"
        app:layout_constraintEnd_toEndOf="@+id/nomedousuario"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="@+id/nomedousuario"
        app:layout_constraintTop_toBottomOf="@+id/nomedousuario" />

    <EditText
        android:id="@+id/enderecodousuario"
        android:layout_width="302dp"
        android:layout_height="62dp"
        android:layout_marginTop="196dp"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/enderecodousuario"
        android:inputType="textMultiLine"
        android:textColorHint="#000000"
        app:layout_constraintEnd_toEndOf="@+id/nomedousuario"
        app:layout_constraintHorizontal_bias="0.482"
        app:layout_constraintStart_toStartOf="@+id/nomedousuario"
        app:layout_constraintTop_toBottomOf="@+id/nomedousuario" />

    <EditText
        android:id="@+id/emaildousuario"
        android:layout_width="290dp"
        android:layout_height="59dp"
        android:layout_marginTop="132dp"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/emaildousuario"
        android:inputType="textMultiLine"
        android:textColorHint="#000000"
        app:layout_constraintEnd_toEndOf="@+id/nomedousuario"
        app:layout_constraintHorizontal_bias="0.513"
        app:layout_constraintStart_toStartOf="@+id/nomedousuario"
        app:layout_constraintTop_toBottomOf="@+id/nomedousuario" />

    <Button
        android:id="@+id/listardenuncias"
        android:layout_width="219dp"
        android:layout_height="65dp"
        android:layout_marginTop="392dp"
        android:hint="@string/listardenuncias"
        android:textColorHint="#000000"
        app:layout_constraintEnd_toEndOf="@+id/nomedousuario"
        app:layout_constraintStart_toStartOf="@+id/nomedousuario"
        app:layout_constraintTop_toBottomOf="@+id/nomedousuario" />

    <Button
        android:id="@+id/listardenuncias2"
        android:layout_width="219dp"
        android:layout_height="65dp"
        android:layout_marginTop="428dp"
        android:hint="@string/listardenuncias2"
        android:textColorHint="#000000"
        app:layout_constraintEnd_toEndOf="@+id/nomedousuario"
        app:layout_constraintStart_toStartOf="@+id/nomedousuario"
        app:layout_constraintTop_toTopOf="@+id/Perfil" />

    <TextView
        android:id="@+id/ou"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="356dp"
        android:hint="@string/ou"
        android:textColorHint="#000000"
        app:layout_constraintEnd_toEndOf="@+id/nomedousuario"
        app:layout_constraintStart_toStartOf="@+id/nomedousuario"
        app:layout_constraintTop_toBottomOf="@+id/nomedousuario" />

</androidx.constraintlayout.widget.ConstraintLayout>