<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@android:color/white"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/login"
        android:layout_width="264dp"
        android:layout_height="57dp"
        android:layout_marginTop="312dp"
        android:hint="@string/login"
        android:textColorHint="#F8000000"
        app:layout_constraintEnd_toEndOf="@+id/logo"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="@+id/logo"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/senha"
        android:layout_width="264dp"
        android:layout_height="57dp"
        android:layout_marginTop="8dp"
        android:hint="@string/senha"
        android:textColor="#FFFFFF"
        android:textColorHint="#000000"
        app:layout_constraintEnd_toEndOf="@+id/logo"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="@+id/logo"
        app:layout_constraintTop_toBottomOf="@+id/login" />

    <Button
        android:id="@+id/entrar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:hint="@string/entrar"
        android:textColorHint="#000000"
        app:layout_constraintStart_toStartOf="@+id/continuarlogado"
        app:layout_constraintTop_toBottomOf="@+id/continuarlogado" />

    <CheckBox
        android:id="@+id/continuarlogado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:hint="@string/continuarlogado"
        app:layout_constraintStart_toStartOf="@+id/senha"
        app:layout_constraintTop_toBottomOf="@+id/senha" />

    <ImageView
        android:id="@+id/logo"
        android:layout_width="481dp"
        android:layout_height="182dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ecomind" />

</androidx.constraintlayout.widget.ConstraintLayout>