<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/textoapoio1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity2">

    <Button
        android:id="@+id/continuarparaperfil"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="480dp"
        android:hint="@string/continuarparaperfil"
        android:textColorHint="#000000"
        app:layout_constraintEnd_toEndOf="@+id/textodeapoio"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="@+id/textodeapoio"
        app:layout_constraintTop_toBottomOf="@+id/textodeapoio" />

    <TextView
        android:id="@+id/textodeapoio"
        android:layout_width="351dp"
        android:layout_height="136dp"
        android:layout_marginTop="28dp"
        android:hint="@string/textodeapoio"
        android:textColorHint="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/logo2"
        android:layout_width="249dp"
        android:layout_height="89dp"
        android:layout_marginTop="1dp"
        app:layout_constraintEnd_toEndOf="@+id/textodeapoio"
        app:layout_constraintStart_toStartOf="@+id/textodeapoio"
        app:layout_constraintTop_toBottomOf="@+id/textodeapoio"
        app:srcCompat="@drawable/ecomind" />

    <TextView
        android:id="@+id/textodeapoio2"
        android:layout_width="329dp"
        android:layout_height="103dp"
        android:layout_marginTop="100dp"
        android:hint="@string/textodeapoio2"
        android:textColorHint="#000000"
        app:layout_constraintEnd_toEndOf="@+id/textodeapoio"
        app:layout_constraintStart_toStartOf="@+id/textodeapoio"
        app:layout_constraintTop_toBottomOf="@+id/textodeapoio" />

    <TextView
        android:id="@+id/textodeapoio3"
        android:layout_width="381dp"
        android:layout_height="176dp"
        android:layout_marginTop="256dp"
        android:hint="@string/textodeapoio3"
        android:textColorHint="#000000"
        app:layout_constraintEnd_toEndOf="@+id/textodeapoio"
        app:layout_constraintStart_toStartOf="@+id/textodeapoio"
        app:layout_constraintTop_toBottomOf="@+id/textodeapoio" />

</androidx.constraintlayout.widget.ConstraintLayout>