<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CadastrarDenuncias">

    <EditText
        android:id="@+id/detalhesdadenuncia"
        android:layout_width="386dp"
        android:layout_height="63dp"
        android:layout_marginTop="192dp"
        android:ems="10"
        android:hint="@string/detalhesdadenuncia"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="@+id/imageView"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ecomind" />

    <Button
        android:id="@+id/enviardenuncia"
        android:layout_width="300dp"
        android:layout_height="59dp"
        android:layout_marginTop="296dp"
        android:hint="@string/enviardenuncia"
        app:layout_constraintEnd_toEndOf="@+id/imageView"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <EditText
        android:id="@+id/titulodadenuncia"
        android:layout_width="386dp"
        android:layout_height="63dp"
        android:layout_marginTop="92dp"
        android:ems="10"
        android:hint="@string/titulodadenuncia"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="@+id/imageView"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />
</androidx.constraintlayout.widget.ConstraintLayout>